# flow_state

./: .all-contributorsrc  .gitignore  CITATION.cff  README.md  codecov.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  test.yml
apps/webapp/: README.md  app.py  requirements.txt
apps/webapp/.streamlit/: config.toml
docs/: Makefile  api.rst  assumptions.rst  cli_examples.rst  conf.py  examples.md  index.md  index.rst  installation.md  nomenclature.md  python_examples.rst  refs.bib  theory.md
docs/api/: atmosphere.md  core.md  index.md  solvers.md  transport.md
docs/configs/: aedc_t9.toml  bam6qt.toml  hifire1.toml  stort_cira.toml
docs/theory/: atmosphere-comparison.md  atmosphere-models.md  definitions.md  gas-models.md  gas-properties.md  index.md  isentropic.md  transport.md
docs/user-guide/: atmosphere-models.md  basic-usage.md  cli.md  config-files.md  index.md  output.md
examples/: bam6qt_conditions.py  flight_conditions_cira86.py  flight_conditions_ussa76.py  flow_config_cira86.toml
legacy/: dimension_conversion_mod.F90  flow_conditions_mod.F90  gas_properties_mod.F90  standard_atmosphere_mod.F90  util_mod.F90  viscosity_mod.F90
scripts/: generate_atmosphere_plots.py  generate_latitude_grid.py
src/flow_state/: __init__.py  _version.py  cli.py  core.py  isentropic.py  solvers.py  turbulence.py  units.py
src/flow_state/atmosphere/: __init__.py  cira86.py  core.py  registry.py  ussa76.py
src/flow_state/gas/: __init__.py  equilibrium.py  park.py  perfect.py
src/flow_state/io/: __init__.py  legacy_dat.py  print_summary.py  read_config.py  write_data.py
src/flow_state/math_utils/: __init__.py  bisection.py
src/flow_state/transport/: __init__.py  core.py  keyes.py  power_law.py  registry.py  sutherland.py
tests/: __init__.py  test_atmosphere.py  test_builders.py  test_equilibrium.py  test_gas.py  test_io.py  test_isentropic.py  test_park.py  test_solvers.py  test_transport.py  test_turbulence.py  test_units.py
