# BSD-3-Clause License - see LICENSE file
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow_state"
dynamic = ["version"]
description = "Lightweight utility for constructing compressible flow states and reference conditions"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.11"
authors = [
    {name = "Christoph Hader", email = "christoph.hader@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["compressible-flow", "aerodynamics", "gas-dynamics", "cfd"]

dependencies = [
    "typer>=0.9.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-bibtex>=2.0",
]

[project.scripts]
flow-state = "flow_state.cli:cli"

[project.urls]
Homepage = "https://github.com/uahypersonics/flow_state"
Repository = "https://github.com/uahypersonics/flow_state"
Documentation = "https://github.com/uahypersonics/flow_state#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "flow_state._version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
